# robotframework-browser-recorder

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
robotframework_browser_recorder/: __init__.py  recorder.py
robotframework_browser_recorder/cli/: __init__.py  main.py
robotframework_browser_recorder/converter/: __init__.py  playwright_to_robot.py
robotframework_browser_recorder/utils/: __init__.py
tests/: __init__.py  test_converter.py
