[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-browser-recorder"
version = "0.4.0"
description = "Record browser interactions and generate Robot Framework tests using Browser library"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Robot Framework Browser Recorder Contributors"}
]
keywords = ["robotframework", "browser", "playwright", "testing", "automation", "recorder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
]

dependencies = [
    "playwright>=1.40.0",
    "robotframework>=6.0",
    "robotframework-browser>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
rfbrowser-record = "robotframework_browser_recorder.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/robotframework-browser-recorder"
Documentation = "https://github.com/yourusername/robotframework-browser-recorder#readme"
Repository = "https://github.com/yourusername/robotframework-browser-recorder"
Issues = "https://github.com/yourusername/robotframework-browser-recorder/issues"

[tool.setuptools.packages.find]
include = ["robotframework_browser_recorder*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
